--- a/blazebananani.css
+++ b/blazebananani.css
@@ -66,7 +66,10 @@
         background-repeat: none;
     }
 */
-
-
-
-
+.playerTableCard {
+    display: inline-block;
+    position: relative;
+    margin-top: 5px;
+    width: 72px;
+    height: 96px;
+}
