게임 초기상태 구현
#detail
1. 덱 구성 후 각 플레이어에게 5장씩 분배
2. 3인으로 플레이시 숫자 1카드는 제외
3. 플레이어에게 나눠준 카드를 제외한 나머지 카드 분류
4. 상세한 상태 추가

--- a/blazebananani.css
+++ b/blazebananani.css
@@ -86,12 +86,17 @@ div#board
         flex-flow: row;
     }
     
-    div#board #table
+    div#board div#table
     {
         margin: 20px;
         grid-row: 2 / span 3;
-        grid-column: 5 / span 6;
-    }
+        grid-column: 5 / span 6; }
+
+        div#board div#table div#testButton {
+            position: absolute;
+            width: 72px;
+            height: 96px;
+            background-image: url('img/cards.jpg'); }
 
     div#board div#hand
     {
