--- a/blazebananani.css
+++ b/blazebananani.css
@@ -77,7 +77,7 @@ div#board
     grid-template-columns: repeat(14, 1fr);
     grid-template-rows: repeat(6, 1fr); }
 
-    div#board #table, div#board div#hand, div#board .blaze-player
+    div#board #table, div#board .button, div#board div#hand, div#board .blaze-player
     {
         background-color: rgba(255, 255, 255, 0.5);
         border-radius: 5px;
@@ -99,7 +99,7 @@ div#board
             display: grid;
             place-items: center;
             grid-template-columns: repeat(6, 1fr);
-            grid-template-rows: repeat(2, 1fr); }
+            grid-template-rows: 1fr 1fr 60px; }
 
 			div#board div#table div#table-container .cardOnTable {
 				width: 100%;
@@ -114,12 +114,27 @@ div#board
 					width: 72px;
 					height: 96px;
 					background-image: url('img/cards.jpg'); }
+
+            div#board div#table div#table-container .button {
+                width: 80%;
+                height: 80%;
+                text-align: center; }
+
+                div#board div#table div#table-container div#attackButton {
+                    background-color: rgba(100, 255, 100, 0.7);
+                    grid-row: 3;
+                    grid-column: 1 / span 3; }
+
+                div#board div#table div#table-container div#passButton {
+                    background-color: rgba(255, 100, 100, 0.7);
+                    grid-row: 3;
+                    grid-column: 4 / span 3; }
                 
 
     div#board div#hand
     {
         grid-row: 6;
-        grid-column: 4 / span 8;
+        grid-column: 3 / span 10;
     }
 
     div#board .blaze-player .blaze-player-name
@@ -145,8 +160,24 @@ div#board
         grid-row: 3;
         grid-column: 11 / span 4; }
     div#board[data-players="4"] .blaze-player[data-pos="3"] {
-        grid-row: 3;
-        grid-column: 1 / span 4; }
-    div#board[data-players="4"] .blaze-player[data-pos="4"] {
         grid-row: 5;
         grid-column: 6 / span 4; }
+    div#board[data-players="4"] .blaze-player[data-pos="4"] {
+        grid-row: 3;
+        grid-column: 1 / span 4; }
+
+    div#board[data-players="5"] .blaze-player[data-pos="1"] {
+        grid-row: 1;
+        grid-column: 6 / span 4; }
+    div#board[data-players="5"] .blaze-player[data-pos="2"] {
+        grid-row: 3;
+        grid-column: 11 / span 4; }
+    div#board[data-players="5"] .blaze-player[data-pos="3"] {
+        grid-row: 5;
+        grid-column: 3 / span 4; }
+    div#board[data-players="5"] .blaze-player[data-pos="4"] {
+        grid-row: 5;
+        grid-column: 9 / span 4; }
+    div#board[data-players="5"] .blaze-player[data-pos="5"] {
+        grid-row: 3;
+        grid-column: 1 / span 4; }
