--- a/blazebananani.css
+++ b/blazebananani.css
@@ -99,7 +99,7 @@ div#board
             display: grid;
             place-items: center;
             grid-template-columns: repeat(6, 1fr);
-            grid-template-rows: 1fr 1fr 60px; }
+            grid-template-rows: 1fr 40px 1fr 40px; }
 
 			div#board div#table div#table-container .cardOnTable {
 				width: 100%;
@@ -109,11 +109,25 @@ div#board
                 justify-content: center;
                 align-items: center; }
 
-				div#board div#table div#table-container .cardOnTable .card {
+				div#board div#table div#table-container .cardOnTable .card[data-filp="front"] {
 					position: absolute;
 					width: 72px;
 					height: 96px;
 					background-image: url('img/cards.jpg'); }
+
+                div#board div#table div#table-container .cardOnTable .card[data-filp="back"] {
+                    position: absolute;
+					width: 72px;
+					height: 96px;
+					background-image: url('img/game_box.png'); }
+            
+            div#board div#table div#table-container .textOnTable {
+                width: 100%;
+                text-align: center}
+
+                div#board div#table div#table-container .textOnTable .text {
+                    width: 100%;
+                    font-weight: bold;}
 
             div#board div#table div#table-container .button {
                 width: 80%;
@@ -174,10 +188,10 @@ div#board
         grid-column: 11 / span 4; }
     div#board[data-players="5"] .blaze-player[data-pos="3"] {
         grid-row: 5;
-        grid-column: 3 / span 4; }
+        grid-column: 9 / span 4; }
     div#board[data-players="5"] .blaze-player[data-pos="4"] {
         grid-row: 5;
-        grid-column: 9 / span 4; }
+        grid-column: 3 / span 4; }
     div#board[data-players="5"] .blaze-player[data-pos="5"] {
         grid-row: 3;
         grid-column: 1 / span 4; }
