--- a/blazebananani.css
+++ b/blazebananani.css
@@ -1,7 +1,7 @@
 /**
  *------
  * BGA framework: © Gregory Isabelli <gisabelli@boardgamearena.com> & Emmanuel Colin <ecolin@boardgamearena.com>
- * BlazeBananani implementation : © <Your name here> <Your email address here>
+ * BlazeBananani implementation : © <Inhwan Lee> <dlsghks1227@gmail.com>
  *
  * This code has been produced on the BGA studio platform for use on http://boardgamearena.com.
  * See http://en.boardgamearena.com/#!doc/Studio for more information.
@@ -71,6 +71,39 @@
 	border: 2px solid white ! important;
     top: -30px ! important;
 }
+.overallCards {
+    width: 100%;
+    min-height: 120px;
+    margin: auto;
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr); }
+
+    .overallCards .cards {
+        width: 100%;
+        height: 100%; }
+
+    .overallCards div#minibetting {
+        grid-row: 1 / span 2;
+        grid-column: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center; }
+
+    .overallCards div#miniBetted {
+        grid-row: 1;
+        grid-column: 2;
+        display: flex;
+        flex-direction: column;
+        justify-content: center; }
+    
+    .overallCards div#miniTrophy {
+        grid-row: 2;
+        grid-column: 2;
+        display: flex;
+        flex-direction: column;
+        justify-content: center; }
 
 div#board
 {
@@ -81,13 +114,13 @@ div#board
     position: relative;
     display: grid;
     grid-template-columns: repeat(14, 1fr);
-    grid-template-rows: repeat(6, 1fr); 
-    background-image: url("img/Blaze-Background.jpg");
+    grid-template-rows: repeat(5, 1fr); 
+    background-image: url("img/Blaze_Background.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;}
 
-    div#board #table, div#board .button, div#board div#hand, div#board .blaze-player
+    div#board #table, div#board .button, div#board div#hand, div#board div#battingHand, div#board .blaze-player, div#board div#discard, div#board div#trophy
     {
         background-color: rgba(0, 0, 0, 0.65);
         border-radius: 5px;
@@ -124,12 +157,6 @@ div#board
 					width: 108px;
 					height: 168px;
 					background-image: url('img/cards.png'); }
-
-                div#board div#table div#table-container .cardOnTable .card[data-filp="back"] {
-                    position: absolute;
-					width: 108px;
-					height: 168px;
-					background-image: url('img/card-back.png'); }
             
             div#board div#table div#table-container .textOnTable {
                 width: 100%;
@@ -153,21 +180,66 @@ div#board
                     background-color: rgba(255, 100, 100, 0.7);
                     grid-row: 3;
                     grid-column: 4 / span 3; }
-                
 
-    div#board div#hand
-    {
-        grid-row: 6;
-        grid-column: 3 / span 10; }
+    div#board div#battingHand {
+        grid-row: 5;
+        grid-column: 2 / span 3; }
+
+        div#board div#battingHand div#batting-cards {
+            margin: 10px;
+            width: 100%; }
+
+    div#board div#hand {
+        grid-row: 5;
+        grid-column: 6 / span 8; }
 
         div#board div#hand div#hand-cards {
             margin: 10px;
             width: 100%;}
 
-    div#board .blaze-player .blaze-player-name
-    {
-        font-weight: bold;
-    }
+    div#board div#discard {
+        grid-row: 1;
+        grid-column: 2 / span 3; }
+
+        div#board div#hand div#discard-cards {
+            margin: 10px;
+            width: 100%;}
+
+    
+    div#board div#trophy {
+        grid-row: 1;
+        grid-column: 11 / span 3; }
+
+        div#board div#hand div#trophy-cards {
+            margin: 10px;
+            width: 100%;}
+
+
+    div#board .blaze-player div#player-container { 
+        width: 100%;
+        height: 100%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 20px 1fr; }
+
+        div#board .blaze-player div#player-container .cards {
+            margin: 10px;
+            width: 100%;
+            height: 100%; }
+
+        div#board .blaze-player div#player-container .player-cards {
+            grid-row: 2;
+            grid-column: 1; 
+            display: flex;
+            flex-direction: column;
+            justify-content: center; }
+
+        div#board .blaze-player div#player-container .player-token-cards {
+            grid-row: 2;
+            grid-column: 2; 
+            display: flex;
+            flex-direction: column;
+            justify-content: center; }
 
     div#board[data-players="3"] .blaze-player[data-pos="1"] {
         grid-row: 1;
@@ -182,16 +254,16 @@ div#board
 
 
     div#board[data-players="4"] .blaze-player[data-pos="1"] {
-        grid-row: 1;
-        grid-column: 6 / span 4; }
+        grid-row: 2;
+        grid-column: 11 / span 4; }
     div#board[data-players="4"] .blaze-player[data-pos="2"] {
-        grid-row: 3;
+        grid-row: 4;
         grid-column: 11 / span 4; }
     div#board[data-players="4"] .blaze-player[data-pos="3"] {
-        grid-row: 5;
-        grid-column: 6 / span 4; }
+        grid-row: 4;
+        grid-column: 1 / span 4; }
     div#board[data-players="4"] .blaze-player[data-pos="4"] {
-        grid-row: 3;
+        grid-row: 2;
         grid-column: 1 / span 4; }
         
 
@@ -199,14 +271,14 @@ div#board
         grid-row: 1;
         grid-column: 6 / span 4; }
     div#board[data-players="5"] .blaze-player[data-pos="2"] {
-        grid-row: 3;
+        grid-row: 2;
         grid-column: 11 / span 4; }
     div#board[data-players="5"] .blaze-player[data-pos="3"] {
-        grid-row: 5;
-        grid-column: 9 / span 4; }
+        grid-row: 4;
+        grid-column: 11 / span 4; }
     div#board[data-players="5"] .blaze-player[data-pos="4"] {
-        grid-row: 5;
-        grid-column: 3 / span 4; }
+        grid-row: 4;
+        grid-column: 1 / span 4; }
     div#board[data-players="5"] .blaze-player[data-pos="5"] {
-        grid-row: 3;
+        grid-row: 2;
         grid-column: 1 / span 4; }
