--- a/blaze.css
+++ b/blaze.css
@@ -350,6 +350,13 @@ div#board {
         background-color: rgba(0, 0, 0, 0.65);
     }
 
+    div#board div#playerBettingCardsPlace[data-state="none"] {
+        background-color: rgba(0, 0, 0, 0.65);
+    }
+    div#board div#playerBettingCardsPlace[data-state="activated"] {
+        background-color: rgba(255, 255, 100, 0.65);
+    }
+
 
 div#board[data-players="3"] div.otherPlayer[data-pos="1"] {
     grid-column: 4 / span 2;
